@@ -66,6 +66,7 @@ var Channel = function(name, Server) {
         playlistclear: 2,
         pollctl: 1.5,
         pollvote: -1,
+        viewhiddenpoll: 1.5,
         mute: 1.5,
         kick: 1.5,
         ban: 2,
@@ -1095,11 +1096,29 @@ Channel.prototype.broadcastUserUpdate = function(user) {
 }
 
 Channel.prototype.broadcastPoll = function() {
-    this.sendAll("newPoll", this.poll.packUpdate());
+    var self = this;
+    var unhidden = this.poll.packUpdate(true);
+    var hidden = this.poll.packUpdate(false);
+    
+    this.users.forEach(function (u) {
+        if (self.hasPermission(u, "viewhiddenpoll"))
+            u.socket.emit("newPoll", unhidden);
+        else
+            u.socket.emit("newPoll", hidden);
+    });
 }
 
 Channel.prototype.broadcastPollUpdate = function() {
-    this.sendAll("updatePoll", this.poll.packUpdate());
+    var self = this;
+    var unhidden = this.poll.packUpdate(true);
+    var hidden = this.poll.packUpdate(false);
+    
+    this.users.forEach(function (u) {
+        if (self.hasPermission(u, "viewhiddenpoll"))
+            u.socket.emit("updatePoll", unhidden);
+        else
+            u.socket.emit("updatePoll", hidden);
+    });
 }
 
 Channel.prototype.broadcastPollClose = function() {
@@ -1679,7 +1698,8 @@ Channel.prototype.tryOpenPoll = function(user, data) {
         return;
     }
 
-    var poll = new Poll(user.name, data.title, data.opts);
+    var obscured = (data.obscured === true);
+    var poll = new Poll(user.name, data.title, data.opts, obscured);
     this.poll = poll;
     this.broadcastPoll();
     this.logger.log("*** " + user.name + " Opened Poll: '" + poll.title + "'");
@@ -1691,6 +1711,10 @@ Channel.prototype.tryClosePoll = function(user) {
     }
 
     if(this.poll) {
+        if (this.poll.obscured) {
+            this.poll.obscured = false;
+            this.broadcastPollUpdate();
+        }
         this.logger.log("*** " + user.name + " closed the active poll");
         this.poll = false;
         this.broadcastPollClose();
