@@ -73,7 +73,10 @@ function handle(chan, user, msg, data) {
         handleUnban(chan, user, msg.substring(7).split(" "));
     }
     else if(msg.indexOf("/poll ") == 0) {
-        handlePoll(chan, user, msg.substring(6));
+        handlePoll(chan, user, msg.substring(6), false);
+    }
+    else if(msg.indexOf("/hpoll ") == 0) {
+        handlePoll(chan, user, msg.substring(6), true);
     }
     else if(msg.indexOf("/d") == 0 && msg.length > 2 &&
             msg[2].match(/[-0-9 ]/)) {
@@ -195,12 +198,12 @@ function handleUnban(chan, user, args) {
     }
 }
 
-function handlePoll(chan, user, msg) {
+function handlePoll(chan, user, msg, hidden) {
     if(chan.hasPermission(user, "pollctl")) {
         var args = msg.split(",");
         var title = args[0];
         args.splice(0, 1);
-        var poll = new Poll(user.name, title, args);
+        var poll = new Poll(user.name, title, args, hidden === true);
         chan.poll = poll;
         chan.broadcastPoll();
         chan.logger.log("*** " + user.name + " Opened Poll: '" + poll.title + "'");
